# leetmock-monorepo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  convex-client.yaml  fly.toml  justfile  langgraph.json  model.py  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy_leetmock.yml
agent-graph/: pyproject.toml
agent-graph-ts/: llms.ts  test-agent.ts
agent-graph-ts/code-interviews/: base-agent.ts
agent-graph/agent_graph/: agent.py  constants.py  event_descriptors.py  events.py  llms.py  new_agent.py  prompts.py  simple_agent.py  staged_agent.py  state_merger.py  template.py  types.py  utils.py
agent-graph/agent_graph/chains/: emitters.py  stage_transition.py  step_tracker.py
agent-graph/agent_graph/code_mock_staged_v1/: coding_stage.py  constants.py  db.py  graph.py  intro_stage.py  prompts.py  schemas.py  stage_subgraph.py  stage_tracker.py
agent-graph/agent_graph/code_mock_staged_v1/subgraphs/: background_stage.py  coding_stage.py  eval_stage.py  intro_stage.py
agent-graph/agent_graph/eval_agent/: constant.py  graph.py  prompts.py  utils.py
agent-graph/agent_graph/eval_agent/sub_eval/: __init__.py  communication.py  problem_solving.py  technical_competency.py  testing.py
agent-graph/agent_graph/simple_agent/: graph.py
agent-graph/agent_graph/staged_agent/: graph.py
agent-graph/agent_graph/storages/: __init__.py  convex.py  langgraph_cloud.py
agent-graph/agent_graph/template/: graph.py  stage_subgraph.py
agent-server/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  justfile  pyproject.toml
agent-server/agent_server/: agent.py  constants.py  context_manager.py  convex.py  langgraph_llm.py  minimal_assistant.py  telemetry.py  types.py  worker.py  worker2.py
agent-server/agent_server/agent_streams/: __init__.py
agent-server/agent_server/agent_triggers/: __init__.py
agent-server/agent_server/chan/: request.py
agent-server/agent_server/contexts/: context_manager.py  session.py
agent-server/agent_server/convex/: query_generator.py  query_watcher.py
agent-server/agent_server/events/: __init__.py  assistant_events.py  code_session_events.py  events.py
agent-server/agent_server/livekit/: chan_value.py  channel.py  streams.py  tts.py  validators.py
agent-server/agent_server/storages/: __init__.py  langgraph_cloud.py
agent-server/agent_server/utils/: logger.py  message_conversion.py  messages.py  profiler.py  query_iterators.py  streams.py
agent-server/agent_server/workflows/: __init__.py  reducers.py  types.py
agent-server/agent_server/workflows/v1/: agent_state.py  constants.py  prompts.py  routines.py  steps.py  types.py
agent-server/scripts/: clean_env.sh
agent-server/tests/: test_message_conversion.py
agent-server/tests/utils/: test_messages_compressor.py
agents/: langgraph.json  pyproject.toml
client/: .env.example  components.json  justfile  mockedEvaluationData.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
client/components/: ConvexClientProvider.tsx  FullScreenSection.tsx  Hero.tsx  HeroCards.tsx  MonacoEditor.tsx  NavBar.tsx  QuestionHolder.tsx  Sponsors.tsx  ThemeProvider.tsx  ThemeToggleButton.tsx  convex-client-provider.tsx  dev-tool.tsx  full-screen-section.tsx  logo.tsx  profile-item.tsx  spinner.tsx  state-visializer.tsx  stepper.tsx  timeline.tsx  tooltip.tsx  user-button.tsx  user-dropdown.tsx  wait.tsx
client/convex/: actions.ts  admins.ts  agentStates.ts  auth.config.ts  codeRunner.ts  codeSessionEvents.ts  codeSessionStates.ts  codingQuestionSet.ts  convex.config.ts  crons.ts  editorSnapshots.ts  eval.ts  functions.ts  http.ts  inviteCodes.ts  jobs.ts  metrics.ts  pricings.ts  questions.ts  schema.ts  sessions.ts  transactions.ts  types.ts  userProfiles.ts
client/hooks/: register_livekitRPC.ts  use-agent-chat.ts  use-agent.ts  use-config.ts  use-connection.ts  use-editor-state.ts  use-editor-store.ts  use-map-watcher.ts  use-non-reactive-query.ts  use-question-store.tsx  use-resize-panel.ts  use-session-create-modal.ts  use-session-sidebar.ts  use-session-state-event.ts  use-session-state.ts  use-sidebar.ts  use-study-plan-store.ts  use-user-profile.ts  useAgent.ts  useCodingInterview.ts  useCodingSession.ts  useConnection.ts  useEditorState.ts  useInterview.ts  useNonReactiveQuery.ts  use_livekit_rpc.ts
client/lib/: VoicePipeline.ts  constants.ts  constants.tsx  evaluation-utils.ts  socket.ts  types.ts  utils.ts
client/providers/: session-state-context.tsx
convex-client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
convex-client/.openapi-generator/: FILES
convex-client/convex_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
convex-client/docs/: ActionApi.md  MutationApi.md  (+329 more)
deployment/: llm_server.json  voice_pipeline.json
libs/: dummy.py  pyproject.toml
libs/libs/: convex_types.py  diffs.py  helpers.py  message_wrapper.py  profiler.py  timestamp.py  types.py
libs/libs/convex/: api.py  convex_requests.py  convex_types.py
livekit-agent/: .env.example  README.md  pyproject.toml
llm-server/: pyproject.toml
llm-server/llm_server/: llm.py  server.py  types.py
llm-server/llm_server/utils/: messages.py
llm_server/: pyproject.toml
notebooks/: agent.ipynb  agent_bench.ipynb  convex.ipynb  langchain_tutorial.ipynb  livechain.ipynb  prompt.ipynb  pydantic-ai.ipynb
question-utils/: convert.py  dataGeneration.py  data_generation.py  endpointRequest.py  generateStartingCode.py  pipeline.py  questions.py  utils.py
schemas/: full_schema.json
scripts/: graph_tffc_benchmark.py  graph_ttfc_benchmark.py  setup_env.py
types/: electrical_engineer.d.ts  full_schema.d.ts  job.d.ts  job_list.d.ts  profile.d.ts  profile_list.d.ts  software_engineer.d.ts
voice-pipeline/: pyproject.toml
voice_pipeline/: README.md  pyproject.toml
voice_pipeline/voice_pipeline/: custom_types.py  main.py  socket_server.py  voice_server.py
(+907 files in other folders)
