[tool.poetry]
name = "leetmock"
version = "0.1.0"
description = ""
authors = ["Brian Yin <toubatbrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
libs = { path = "libs", develop = true }
agent_graph = { path = "agent-graph", develop = true }
voice_pipeline = { path = "voice-pipeline", develop = true }
llm_server = { path = "llm-server", develop = true }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
