[tool.poetry]
name = "leetmock"
version = "0.1.0"
description = ""
authors = ["LeetMock <leetmock001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
libs = { path = "libs", develop = true }
agent_graph = { path = "agent-graph", develop = true }
convex-client = { path = "convex-client", develop = true }
langgraph-cli = "^0.1.50"
matplotlib = "^3.9.2"
convex = "0.6.0"
pydantic-ai = "^0.0.13"
logfire = "^2.8.0"
langchain-fireworks = "^0.2.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"