[tool.poetry]
name = "agent-graph"
version = "0.1.0"
description = ""
authors = ["Brian Yin <toubatbrian@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agent_graph", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-anthropic = "^0.1.20"
tavily-python = "^0.3.5"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
convex = "^0.6.0"
langchainhub = "^0.1.20"
python-dotenv = "^1.0.1"
langgraph = "^0.2.3"
libs = { path = "../libs", develop = true }
convex_client = { path = "../convex-client", develop = true }
langchain-core = "^0.2.30"
jinja2 = "^3.1.4"
langgraph-cli = "^0.1.52"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
