[tool.poetry]
name = "agent-server"
version = "0.1.0"
description = ""
authors = ["Lucheng_Hugh <hughqing@qq.com>"]
readme = "README.md"
packages = [
    { include = "agent_server", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
livekit-plugins-deepgram = "0.6.11"
livekit-plugins-openai = "0.10.7"
livekit-plugins-silero = "0.7.3"
python-dotenv = "1.0.1"
langgraph = "0.2.54"
langgraph-sdk = "0.1.42"
matplotlib = "3.9.3"
nest-asyncio = "1.6.0"
debugpy = "1.8.9"
livekit = "0.18.1"
pydantic = "2.10.3"
livekit-agents = "0.11.3"
convex = "0.6.0"
openapi-generator-cli = "4.3.1"
convex_client = { path = "../convex-client", develop = true }
libs = { path = "../libs", develop = true }
agent-graph = { path = "../agent-graph", develop = true }
livekit-plugins-elevenlabs = "0.7.7"
elevenlabs = "1.13.2"
python-debouncer = "0.1.5"
psutil = "5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
