[project]
name = "agent-server"
version = "0.1.0"
description = ""
authors = [{ name = "Lucheng_Hugh", email = "hughqing@qq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "livekit>=0.18.1",
    "livekit-agents>=0.12.11",
    "livekit-plugins-deepgram>=0.6.11,<0.7",
    "livekit-plugins-openai>=0.10.7,<0.11",
    "livekit-plugins-silero>=0.7.3,<0.8",
    "livekit-plugins-elevenlabs>=0.7.7,<0.8",
    "livekit-plugins-turn-detector>=0.4.0,<0.5",
    "livekit-plugins-cartesia>=0.4.8",
    "python-dotenv==1.0.1",
    "langgraph>=0.2.44,<0.3",
    "langgraph-sdk==0.1.42",
    "matplotlib==3.9.3",
    "nest-asyncio==1.6.0",
    "debugpy==1.8.9",
    "pydantic==2.10.3",
    "convex==0.6.0",
    "openapi-generator-cli==4.3.1",
    "elevenlabs==1.13.2",
    "python-debouncer==0.1.5",
    "psutil==5.9.8",
    "convex_client",
    "libs",
    "agent-graph",
    "logfire[system-metrics, httpx, aiohttp]",
    "loguru>=0.7.3",
    "livechain==0.0.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.2,<9",
    "pytest-watch>=4.2.0,<5",
]

[tool.uv]

[tool.uv.sources]
convex_client = { path = "../convex-client", editable = true }
libs = { path = "../libs", editable = true }
agent-graph = { path = "../agent-graph", editable = true }

[tool.hatch.build.targets.sdist]
include = ["./agent_server"]

[tool.hatch.build.targets.wheel]
include = ["./agent_server"]

[tool.hatch.build.targets.wheel.sources]
"./agent_server" = "agent_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
