[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "libs" }
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
