[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "libs" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
convex_client = { path = "../convex-client", develop = true }
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
